--- a/chapter01.tex
+++ b/chapter01.tex
@@ -42,32 +42,45 @@ By the end of this report, we will present the results achieved and the uncertai
 
 Pragmatically interacting with the physical environment requires sensing. Sensing is input for enumerous biological systems (e.g. nervous system, diggestive system), enabling such systems to respond properly to the changes observed by the sensors. 
 
-Sensors do not perform action. They are the means in which complex systems acquire informations about the environment. Although, the sensors play a key role in almost every systems, they are located in a low level laywer. Normally, incapable to responde direct to external stimulus without a system to observe the input data (provided by one or multiple sensors). The system react to the sensor stymulus through other means.
+\begin{figure}[h]
+   \centering
+     \begin{tabular}{lr}
+       \includegraphics[scale=0.45]{img/fig:sensors:role}
+     \end{tabular}
+   \caption{The general architecture of a system attached to sensors}
+   \label{fig:sensors:role}
+ \end{figure}
+
+Sensors do not perform action. They are the means in which complex systems acquire informations about the environment. Although, the sensors play a key role in almost every systems, they are located in a low laywer (Figure \ref{fig:sensors:role}), meaning that they have a low level of importance in terms of processing/filtering the data. Normally, incapable to responde direct to external stimulus without a system to observe the input data (provided by one or multiple sensors). The system react to the sensor stymulus through other means.
 
 Thus, sensor is just responsible for the data aquisition (physical or electric) for a system located in a upper layer level of abstraction.
 
 \subsubsection{Types}
 
-There are virtually sensors for all kinds of properties (Figure\ref{fig:sensors}) - sometimes called \textbf{measurands}. They are essentially classified based in the measurands observation for which they were designed for.
+There are virtually sensors for all kinds of properties (Figure\ref{fig:sensors}) - in sometimes literatures called of \textbf{measurands}. They are essentially classified based in the measurands for which they were designed for.
 
 \begin{figure}[h]
    \centering
      \begin{tabular}{lr}
-       \includegraphics[scale=0.5]{img/fig:sensors}
+       \includegraphics[scale=0.50]{img/fig:sensors}
      \end{tabular}
    \caption{Different types of measurands (adapted from \cite{WhiteRichard})}
    \label{fig:sensors}
  \end{figure}
 
-\subsubsection{What is a good sensor?}
+\subsubsection{Properties}
 
-%senses only the measured property only
+The sensor is subject to issues. As the sensor is the capacity of a system to observe the environment, this affects diretly the solution (the main purpose of its existence).
+
+The most common issues are: noise, imprecision, speed. 
+
+\paragraph{Precision}
 
 \subsubsection{Calibration}
 
 %drift
 
-\subsubsection{Precision}
+
 
 
 
